# os

./: README.md
ex1/: WhatIDo  WhatIDo2.1.c
ex1/project01/: .Makefile.swp  CMakeLists.txt  Makefile  README  ex1.tar  ex1_old_AF.tar  osm.cpp
ex2/: CMakeLists.txt  QueueWrapper.cpp  QueueWrapper.h  README  README.md  Thread.cpp  Thread.h  app  jona1.cpp  jona2.cpp  jona3.cpp  jona4.cpp  jona5.cpp  main.cpp  makefile  tests.rar  uthreads.cpp  uthreads.h
ex3/: Barrier.cpp  CMakeLists.txt  Makefile  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  README  ex3.tar
ex4/: CMakeLists.txt  Makefile  MemoryConstants.h  PhysicalMemory.cpp  PhysicalMemory.h  README  SimpleTest.cpp  VirtualMemory copy.cpp  VirtualMemory.cpp  VirtualMemory.h  ex4.tar  whatsappClient.cpp  whatsappClient.hpp  whatsappServer.cpp  whatsappServer.hpp
ex4/tests/: .gitignore  README.md  kb_tests.cpp
